# ghgrab

./: .rusty-hook.toml  CONTRIBUTING.md  Cargo.toml  README.md  exampletheme.toml  flake.nix  package.json  pyproject.toml  setup.py
.github/workflows/: build.yml
src/: agent.rs  config.rs  download.rs  github.rs  lib.rs  main.rs
src/ui/: mod.rs  theme.rs
src/ui/components/: browser.rs  input.rs  preview.rs  repo_search.rs  searching.rs  toast.rs
tests/: app_state_test.rs
